@@ -4,6 +4,7 @@
 - Timline: improve handling when vcam values are tweaked inside shot inspector (fogbugz 1109024)
 - OnTargetObjectWarped no longer generates garbage
 - Orthographic cameras allow a Near Clip of 0
+- Bugfix: collider was pushing camera too far if there were multiple overlapping obstacles
 
 
 <size=20><b>Version 2.2.8</b></size>
